# quem_sabe_faz_ao_vivo

./: .mcp.json  BENCHMARK.md  README.md  WORKSHOP_PROMPT.md  databricks.yml  pyproject.toml  teste.md
.ai-dev-kit/: .installed-skills
.claude/: settings.json
.github/workflows/: databricks.yml
resources/: bakehouse_dashboard.yml  bakehouse_job.yml  bakehouse_pipeline.yml  bakehouse_schemas.yml
scripts/: create_catalog_bakehouse.ipynb
src/dashboards/: bakehouse.lvdash.json  bakehouse_dashboard.lvdash.json
src/pipeline/: bronze_customers.sql  bronze_franchises.sql  bronze_reviews.sql  bronze_suppliers.sql  bronze_transactions.sql  gold_daily_sales_by_franchise.sql  gold_franchise_performance.sql  gold_sales_by_country.sql  gold_sales_by_product.sql  gold_sentiment_by_franchise.sql  gold_top_customers.sql  silver_customers.sql  silver_franchises.sql  silver_reviews_sentiment.sql  silver_transactions.sql
src/pipelines/bakehouse/transformations/bronze/: customers.sql  franchises.sql  reviews.sql  suppliers.sql  transactions.sql
src/pipelines/bakehouse/transformations/gold/: daily_sales_by_franchise.sql  franchise_performance.sql  sales_by_country.sql  sales_by_product.sql  sentiment_by_franchise.sql  top_customers.sql
src/pipelines/bakehouse/transformations/silver/: customers.sql  franchises.sql  reviews_sentiment.sql  transactions.sql
tests/: conftest.py  test_transformations.py
