[project]
name = "quem_sabe_faz_ao_vivo"
version = "0.0.1"
authors = [{ name = "mateusvbkasuya@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
    "pyyaml",          # os testes leem resources/bakehouse_pipeline.yml
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
main = "quem_sabe_faz_ao_vivo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
# .claude/ sao as skills do AI Dev Kit (nao versionadas no git).
# O notebook e feito de celulas %sql: o ruff le como Python e acusa 'invalid-syntax'
# que sao falsos positivos, nao bugs.
extend-exclude = [".claude", "scripts/*.ipynb"]
